--- a/todo.txt
+++ b/todo.txt
@@ -2,8 +2,6 @@ Starter:
 
 Base models/objects/whatever on datasets, not models?
 
-Support/spec aliased queries, fields, and connections.
-
 Stop using model association hashes to track associations? Or set them, but
 only in certain cases when we can be sure they're complete?
 
@@ -78,6 +76,8 @@ Spec limited eager-loading via window functions.
 Support counts on connections. Should respect arguments, and just return
 counter caches when available and appropriate (no arguments). How should
 counts change when paginating?
+
+Support and spec aliased connections.
 
 
 
