--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,14 @@
-Starter:
+Soon:
 
-Base models/objects/whatever on datasets, not models?
+Rename Prelay::Model -> Prelay::Type.
 
-Stop using model association hashes to track associations? Or set them, but
-only in certain cases when we can be sure they're complete?
+Support marking attributes (and association fields) not-null.
 
+Support descriptions on attributes.
 
-
-
-
-Minor stuff:
+Stop using model association hashes to track associations. For now handle
+inverse association referencing with additional queries (though spec that
+case, of course).
 
 Add Prelay::ID.for().
 
@@ -23,34 +22,8 @@ Spec introspection query.
 
 Spec custom dependent_columns.
 
-Rename ASTs?
-
-Come up with a better name than 'Model'. Also need a naming scheme.
-
-
-
-
-
-Other Relay features to support:
-
 Spec merging of repeat invocations of the same field/association, but nail
 down what differences in arguments mean.
-
-
-
-
-
-Associations:
-
-Support associated :through, to allow GraphQL queries that skip the
-intermediate associations. Should merge into other parts of the query that
-query the intermediate association.
-
-Figure out how to handle reciprocal associations.
-
-If no columns are requested at an association level (will commonly be the case
-when accessing :through associations), try to push that down to the DB as a
-join. Maybe do that sometimes when columns are requested anyway.
 
 
 
@@ -75,17 +48,31 @@ Support counts on connections. Should respect arguments, and just return
 counter caches when available and appropriate (no arguments). How should
 counts change when paginating?
 
-Support and spec aliased connections.
+Support and spec aliased connections (with different arguments).
 
 
 
 
 
-More:
+Future association work:
 
-Support marking attributes (and association fields) not-null.
+Support associated :through, to allow GraphQL queries that skip the
+intermediate associations. Should merge into other parts of the query that
+query the intermediate association.
 
-Support descriptions on attributes.
+Figure out how/whether to optimize to reciprocal associations.
+
+If no columns are requested at an association level (will commonly be the case
+when accessing :through associations), try to push that down to the DB as a
+join. Maybe do that sometimes when columns are requested anyway.
+
+
+
+
+
+Future miscellaneous stuff:
+
+Base types on datasets, in addition to or instead of models?
 
 Support deprecation warnings on fields (and whole objects?).
 
@@ -113,3 +100,6 @@ Plural identifying root fields:
 https://facebook.github.io/relay/graphql/objectidentification.htm#sec-Plural-identifying-root-fields
 
 Instrumentation?
+
+Set loaded associations in model objects? Would only be in certain cases when
+we can be sure they're complete.
