--- a/todo.txt
+++ b/todo.txt
@@ -33,8 +33,6 @@ Encode values and connection orders in cursors. Spec them in fragments.
 
 Support custom orders, and spec that they work with seek pagination.
 
-Spec limited eager-loading via window functions.
-
 Support counts on connections. Should respect arguments, and just return
 counter caches when available and appropriate (no arguments). How should
 counts change when paginating?
@@ -64,6 +62,8 @@ join. Maybe do that sometimes when columns are requested anyway.
 
 
 Future miscellaneous stuff:
+
+Use qualified columns everywhere.
 
 Base types on datasets, in addition to or instead of models?
 
