Make sure that ordering associations by descending orders works as well.

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
 Soon:
 
+Always tack on the pk when sorting.
+
 Spec encoded values in cursors in fragments.
 
 Support cursors that are things other than id.
@@ -53,8 +55,6 @@ Set associated objects in Sequel object association caches when possible? Only w
 Future miscellaneous stuff:
 
 Make sure it works to have fields named 'cursor'.
-
-Make sure it works to order by Sequel.desc(expression).
 
 Clean up that hacky deep copying logic in RelayProcessor.
 
