--- a/todo.txt
+++ b/todo.txt
@@ -14,15 +14,11 @@ Figure out where custom query logic (like full-text search) should live.
 
 Pagination:
 
-Support custom orders, and spec that they work with seek pagination.
-
 Support counts on connections. Should respect arguments, and just return
 counter caches when available and appropriate (no arguments). How should
 counts change when paginating?
 
-Move seek pagination invocation out of DatasetResolver, probably.
-
-Encode sort fields in cursors (?). Spec them in fragments.
+Move seek pagination invocation out of DatasetResolver, probably?
 
 
 
