--- a/todo.txt
+++ b/todo.txt
@@ -44,6 +44,8 @@ Set associated objects in Sequel object association caches when possible? Only w
 
 Future miscellaneous stuff:
 
+Make interface a module that Prelay::Type subclasses can include?
+
 Always tack on the pk when sorting.
 
 Make sure it works to have fields named 'cursor'.
