--- a/todo.txt
+++ b/todo.txt
@@ -44,6 +44,8 @@ Set associated objects in Sequel object association caches when possible? Only w
 
 Future miscellaneous stuff:
 
+Randomize/fuzz fragment testing specs?
+
 Make interface a module that Prelay::Type subclasses can include?
 
 Always tack on the pk when sorting.
